--- a/application.yaml
+++ b/application.yaml
@@ -5,7 +5,7 @@ eureka:
     fetch-registry: true
     register-with-eureka: true
     service-url:
-      defaultZone: ${EUREKA_SERVER_ADDRESS:http://host.docker.internal:8761/eureka}
+      defaultZone: http://host.docker.internal:8761/eureka
       
 okta:
   oauth2:
